[package]
name = "rls"
version = "0.1.0"
authors = ["Stckrz rin449@gmail.com"]
license = "MIT"
description = "just ls without long form but a little cuter"
repository = "https://github.com/stckrz/rls"
keywords = ["cli", "files"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
colored = "2.1.0"
clap = {version = "4.5.17", features = ["derive"]}
