[package]
name = "stckrls"
version = "0.2.1"
authors = ["Stckrz rin449@gmail.com"]
license = "MIT"
description = "just ls without long form but a little cuter"
repository = "https://github.com/stckrz/rls"
keywords = ["cli", "files"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
colored = "2.1.0"
clap = {version = "4.5.17", features = ["derive"]}
chrono = "0.4.38"
comfy-table = "7.1.1"
